rust/go/tunnel.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package punklorde_go */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
extern size_t _GoStringLen(_GoString_ s);
extern const char *_GoStringPtr(_GoString_ s);
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 3 "tunnel.go"

#include <stdlib.h>
#include <stdint.h>
#include <string.h>

#ifdef __ANDROID__
#include <android/log.h>
static void go_logi(const char* msg) {
    __android_log_print(ANDROID_LOG_INFO, "go_tunnel", "%s", msg);
}
static void go_loge(const char* msg) {
    __android_log_print(ANDROID_LOG_ERROR, "go_tunnel", "%s", msg);
}
#else
static void go_logi(const char* msg) { (void)msg; }
static void go_loge(const char* msg) { (void)msg; }
#endif

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#if !defined(__cplusplus) || _MSVC_LANG <= 201402L
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
#include <complex>
typedef std::complex<float> GoComplex64;
typedef std::complex<double> GoComplex128;
#endif
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern int EC_New(char* server, char* username, char* password, char* totpSecret);
extern void EC_SetSmsCode(int id, char* code);
extern void EC_Free(int id);
extern char* EC_LoginStart(int id);
extern char* EC_LoginPassword(int id);
extern char* EC_LoginSMS(int id);
extern char* EC_LoginTOTP(int id);
extern char* EC_GetToken(int id);
extern char* EC_GetResources(int id);
extern char* EC_GetIP(int id);
extern char* EC_GetAssignedIP(int id);
extern char* EC_OpenDataChannels(int id);
extern int EC_ReadRecv(int id, void* buf, int bufLen);
extern int EC_WriteSend(int id, void* buf, int bufLen);
extern int EC_ReadSend(int id, void* buf, int bufLen);
extern char* EC_GetDNSServer(int id);
extern int EC_IsConnected(int id);
extern char* EC_GetDnsData(int id);

#ifdef __cplusplus
}
#endif